style: fix spacing

--- a/web/components/header/Header.module.scss
+++ b/web/components/header/Header.module.scss
@@ -28,11 +28,11 @@
 }
 
 .user {
-    margin: 0 25px;
+    margin: 0 20px;
 }
 
 .logoText {
-    margin-left: 25px;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
     
